--- a/static/index.html
+++ b/static/index.html
@@ -6,5 +6,8 @@
   <script src="https://fb.me/react-dom-0.14.3.min.js"></script>
   <script src="socket.io.js"></script>
   <script src="client.js"></script>
+  <p><a href="03-vr-presentation.html">Open WebVR Sample 3</a></p>
+  <p><a href="05-room-scale.html">Open WebVR Sample 5</a></p>
+  <p>Taken from <a href="https://github.com/toji/webvr.info">webvr.info</a></p>
 </body>
 </html>
