Integrate socket.io and send pose information every 5 seconds

--- a/static/03-vr-presentation.html
+++ b/static/03-vr-presentation.html
@@ -81,6 +81,8 @@ found in the LICENSE file.
   <body>
     <canvas id="webgl-canvas"></canvas>
     <div id="presenting-message">Put on your headset now</div>
+    <script src="socket.io.js"></script>
+    <script>const socket = io()</script>
     <script src="js_webvr/03-vr-presentation.js"></script>
   </body>
 </html>
