Fix link for webcam.html; startWebcam() in VR App

--- a/static/webcam.html
+++ b/static/webcam.html
@@ -11,5 +11,5 @@
   <!-- <canvas id="myCanvas" hidden></canvas> -->
   <img id="my-data-uri" src="">
 </body>
-<script src="webcam.js"></script>
+<script src="js/webcam.js"></script>
 </html>
