--- a/static/03-vr-presentation.html
+++ b/static/03-vr-presentation.html
@@ -81,8 +81,14 @@ found in the LICENSE file.
   <body>
     <canvas id="webgl-canvas"></canvas>
     <div id="presenting-message">Put on your headset now</div>
+    <script src="js/webcam.js"></script>
     <script src="socket.io.js"></script>
-    <script>const socket = io()</script>
+    <script>
+    window.onload = function(){
+      const socket = io()
+      startWebcam()
+    }
+    </script>
     <script src="js_webvr/03-vr-presentation.js"></script>
   </body>
 </html>
