--- a/static/webcam.html
+++ b/static/webcam.html
@@ -5,7 +5,7 @@
 <body>
   <p>
     <button onclick="startWebcam();">Start WebCam</button>
-    <button onclick="getCurrentFrame();">Take Snapshot</button>
+    <button onclick="writeCurrentFrameToIMG();">Take Snapshot</button>
   </p>
   <!-- <video id="video" hidden autoplay></video> -->
   <!-- <canvas id="myCanvas" hidden></canvas> -->
