Finalize landing page

--- a/static/index.html
+++ b/static/index.html
@@ -1,13 +1,17 @@
 <html>
 <body>
+  <h1>Test WebSocket connection here:</h1>
   <div id="root"></div>
   <!-- <script src="lib.js"></script> -->
   <script src="https://fb.me/react-0.14.3.min.js"></script>
   <script src="https://fb.me/react-dom-0.14.3.min.js"></script>
   <script src="socket.io.js"></script>
   <script src="client.js"></script>
+  <h1>Test WebCam here:</h1>
   <p><a href="webcam.html">Open WebCam App</a></p>
-  <p><a href="03-vr-presentation.html">Open WebVR Sample 3</a></p>
-  <p>Taken from <a href="https://github.com/toji/webvr.info">webvr.info</a></p>
+  <h1>Run the app:</h1>
+  <p><a href="03-vr-presentation.html">Run Holographic Object Detection App</a></p>
+  <p>Sample 3 of <a href="https://github.com/toji/webvr.info">webvr.info</a> samples has been used as a basis for our VR application.</p>
+  <p><b>Make sure to allow the application to use your webcam when asked.</b></p>
 </body>
 </html>
